# folders_sync

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  pubspec.yaml
.github/workflows/: on_pull_request.yml
assets_dev/loca/: loca.csv
lib/: main.dart
lib/services/: files_service.dart
lib/services/sync_database/: hive_sync_database.dart  i_sync_database.dart  synced_folder.dart  synced_folder.g.dart
lib/state/: state.dart
lib/widgets/: my_app.dart
lib/widgets/home_screen/: home_screen.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
resources/: Info.plist
src/: main.rs
test/services/: files_service_test.dart
