[package]
name = "folders_sync"
version = "0.0.1"
authors = ["James Leahy <defuncart@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cargo-emit = "0.2.1"
nativeshell_build = { version = "0.1.13" }
velcro = "0.5.3"

[dependencies]
nativeshell = { version = "0.1.13" }
env_logger = "0.9.0"
